Stop footer icons overflowing on mobile

--- a/cmd/serve/assets/stylesheet/footer.css
+++ b/cmd/serve/assets/stylesheet/footer.css
@@ -93,7 +93,7 @@ body > footer {
     ul.icons {
         display: flex;
         flex-direction: row;
-        gap: 25px;
+        gap: var(--smedium-space);
 
         a {
             background: none;
@@ -112,10 +112,6 @@ body > footer {
             &:hover {
                 fill: var(--link-colour);
             }
-        }
-
-        @media (width <= 1000px) {
-            justify-content: left;
         }
     }
 
